--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>3.6.5</version>
+        </dependency>
     </dependencies>
 
     <build>
